--- a/mongoblogproject/00-starting-project/views/post-detail.ejs
+++ b/mongoblogproject/00-starting-project/views/post-detail.ejs
@@ -8,11 +8,16 @@
   <body>
     <%- include('includes/header') %>
     <main id="post-detail">
-      <h1><%= posts.title %></h1>
-      <section id="post-meta">...</section>
+      <h1><%= post.title %></h1>
+      <section id="post-meta">
+        <address>
+          <a href="mailto:<%= post.author.email %>"><%= post.author.name %></a>
+        </address>
+        | <time datetime="<%= post.date %>"><%= post.humanReadableDate %></time>
+      </section>
       <hr />
       <section>
-        <p id="body"><%= posts.body %></p>
+        <p id="body"><%= post.body %></p>
       </section>
     </main>
   </body>
