--- a/uploadingfiles/views/new-user.ejs
+++ b/uploadingfiles/views/new-user.ejs
@@ -7,20 +7,30 @@
     <title>New Profile</title>
     <link rel="stylesheet" href="/styles/base.css" />
     <link rel="stylesheet" href="/styles/profiles.css" />
+    <script src="/scripts/file-preview.js" defer></script>
   </head>
   <body>
     <main id="new-user">
-      <form action="/profiles" method="POST">
+      <form action="/profiles" method="POST" enctype="multipart/form-data">
         <div class="form-control">
           <label for="username">Username</label>
           <input type="text" id="username" name="username" required />
         </div>
         <div class="form-control">
           <label for="image">User image</label>
-          <input type="file" id="image" name="image" required />
+          <input
+            type="file"
+            id="image"
+            name="image"
+            required
+            accept="image/jpg, image/png, image/jpeg"
+          />
+          <img id="image-preview" src="" alt="Your picked image." />
         </div>
         <button class="btn">Save User</button>
       </form>
     </main>
+
+    <!--<script src="/scripts/file-preview.js"></script> -->
   </body>
 </html>
